--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <title>Axel Lopez | Full Stack Developer</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/atom-one-dark.min.css" />
+    <script src="%PUBLIC_URL%/highlight.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
